# IA_Resta

./: ._ijcai11.aux  ._ijcai11.bbl  ._ijcai11.bib  ._ijcai11.blg  ._ijcai11.doc  ._ijcai11.sty  ._ijcai11.tex  ._named.bst  README.md
ShapeSimilarityII80/images/Glas-Cups/: Thumbs.db
ShapeSimilarityII80/images/Heart/: Thumbs.db
ShapeSimilarityII80/images/TestJAIR/: Thumbs.db  (+1 more)
ShapeSimilarityII80/old_images/: Thumbs.db
entrega_final/: COM_EXECUTAR
entrega_final/Resta/codi/codi/: #dibuixa.cpp#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  descrip.cpp~  dibuixa  dibuixa.cpp  dibuixa_resul  dibuixa_resul.cxx  dibuixa_resul.cxx~  executa.cpp~  figura.cpp~  juxtaposi.cpp~  juxtaposi.h~  juxtaposibo.cpp~  vertex.txt
juxtaposicio_final/: LLEGEIXME  LLEGEIXME~  Makefile  Makefile.Debug  Makefile.Release  bordersResult.ppm  final  final.pro  img_tmp.ppm  mainwindow.cpp  object_script.final.Debug  ui_mainwindow.h  vertex.txt  vertex1.txt  vertex2.txt
juxtaposicio_final/codi/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  dibuixa  dibuixa.cpp  dibuixa_resul  dibuixa_resul.cxx  dibuixa_resul.cxx~  executa  executa.cpp  executa.cpp~  juxtaposi.cpp  juxtaposi.cpp~  juxtaposi.h  resultat
juxtaposicio_final/recformas/: Extended.tmproj  Makefile  RecFormas.cpp~  fich.txt  resSimBonesPesosDiferentes.txt  vertex.txt
memoria/: ijcai11.aux  ijcai11.bbl  ijcai11.blg  ijcai11.tar  ijcai11.tex~  memIA.aux  memIA.dvi  memIA.tex  memIA.tex.backup  memIA.tex~
old_images/Heart/: p.xcf
old_images/hammer/: Thumbs.db
(+101 files in other folders)
