
cmake_minimum_required(VERSION 2.8)
PROJECT (Step1)

FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(dibuixa_resul dibuixa_resul.cxx)
TARGET_LINK_LIBRARIES(dibuixa_resul vtkRendering)

